2013-09-23  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #14547]
	* string/strcoll_l.c (coll_seq): New members rule, idx,
	save_idx and back_us.
	(get_next_seq_nocache): New function.
	(do_compare_nocache): New function.
	(STRCOLL): Use get_next_seq_nocache and do_compare_nocache
	when malloc fails.

	* string/strcoll_l.c (coll_seq): New structure.
	(get_next_seq_cached): New function.
	(get_next_seq): New function.
	(do_compare): New function.
	(STRCOLL): Use GNU style definition.  Simplify implementation
	by using get_next_seq, get_next_seq_cached and do_compare.

2013-10-31  Andreas Schwab  <schwab@suse.de>

	[BZ# 15917]
	* stdio-common/vfscanf.c (_IO_vfwscanf): Handle leading '0' not
	followed by 'x' as part of digit sequence.
	* stdio-common/tst-sscanf.c (double_tests2): New tests.

2013-10-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/strcpy.S (strcpy): Add word load/store
	to provide a boost for large inputs with word alignment.
	* sysdeps/powerpc/powerpc64/stpcpy.S (__stpcpy): Rewrite
	implementation based on optimized PPC64 strcpy.
	* sysdeps/powerpc/powerpc64/power7/strcpy.S: New file: optimized
	strcpy for PPC64/POWER7 based on both doubleword and word load/store.
	* sysdeps/powerpc/powerpc64/power7/stpcpy.S: New file: optimized
	stpcpy for PPC64/POWER7 based on PPC64/POWER7 strcpy.

2013-10-25  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #16072]
	* sysdeps/posix/getaddrinfo.c (gethosts): Allocate tmpbuf on
	heap for large requests.

2013-09-02  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14155]
	* sysdeps/ieee754/flt-32/e_jnf.c (__ieee754_jnf): Use double for
	intermediate calculations in recurrence.
	(__ieee754_ynf): Likewise.
	* math/libm-test.inc (jn_test_data): Do not allow spurious
	underflow exception.  Add more tests.
	(yn_test_data): Add more tests.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2013-08-29  Thomas Schwinge  <thomas@codesourcery.com>
